# Fluidsim

./: CMakeLists.txt  README.md  main.c  obstacles.txt  render_math.cu  render_math.cuh  settings.txt  sim_math.cu  sim_math.cuh  sim_parser.c  spawn.txt  types.h
old_functions/: cell_ll.c  cell_ll.h  render.c  render.h  sim_math.c  sim_math.h
src/: main.c  render_math.cu  render_math.cuh  sim_math.cu  sim_math.cuh  sim_parser.c  sim_parser.h  types.h
